Primeiro commit da Parte2

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form - Part 1</title>
+    <title>Form - Part 2</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="loadloc.js" defer></script>
 </head>
 <body>
+
 
 <header>Using CSS to style an HTML Form</header>
 <article>
