--- a/index.html
+++ b/index.html
@@ -7,68 +7,138 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<form>
+   <body>
+  <form>
     <!-- Personal Information -->
     <fieldset>
-        <legend>Personal Information</legend>
-
+      <legend>Personal Information</legend>
+         <!-- Title -->
         <label for="title">Title</label>
         <select id="title" name="title">
-            <option value="mr">Mr.</option>
-            <option value="mrs">Mrs.</option>
-            <option value="ms">Ms.</option>
-            <option value="dr">Dr.</option>
+        <option value="mr">Mr.</option>
+        <option value="mrs">Mrs.</option>
+        <option value="ms">Ms.</option>
+        <option value="dr">Dr.</option>
         </select>
+        <br><br>
 
+        <!-- First name -->
         <label for="first-name">First name</label>
         <input type="text" id="first-name" name="first-name" required placeholder="Your first name here">
+        <br><br>
 
+        <!-- Last name -->
         <label for="last-name">Last name</label>
         <input type="text" id="last-name" name="last-name" required placeholder="Your last name here">
+        <br><br>
 
+        <!-- Email -->
         <label for="email">Email</label>
         <input type="email" id="email" name="email" required placeholder="youremail@server.com">
-    </fieldset>
+
+        </fieldset>
 
     <!-- Address -->
     <fieldset>
-        <legend>Address</legend>
-
+      <legend>Address</legend>
+        <!-- Street -->
         <label for="street">Street</label>
         <input type="text" id="street" name="street" required placeholder="Street, number, apartment">
+        <br><br>
 
+        <!-- City -->
         <label for="city">City</label>
         <input type="text" id="city" name="city" required placeholder="City">
+        <br><br>
 
+        <!-- State/Region -->
         <label for="state">State/Region</label>
         <input type="text" id="state" name="state" placeholder="State">
+        <br><br>
 
+        <!-- Postal code -->
         <label for="postal-code">Postal code</label>
         <input type="text" id="postal-code" name="postal-code" required placeholder="Postcode" pattern="\d{4}-\d{3}">
+        <br><br>
 
+        <!-- Country -->
         <label for="country">Country</label>
         <select id="country" name="country" required>
-            <option value="">Select country</option>
-            <!-- Vai ser preenchido dinamicamente pelo loadloc.js -->
-        </select>
-    </fieldset>
+        <option value="">Select country</option>
 
-    <!-- Payment Details -->
+        </fieldset>
+
+    <!-- Payment details -->
     <fieldset>
-        <legend>Payment details</legend>
-
-        <p>Credit Card</p>
+      <legend>Payment details</legend>
+      <!-- Credit Card Type -->
+        <div class="payment-group">
+        <span>Credit Card</span><br>
         <label><input type="radio" name="card-type" value="amex" required> American Express</label>
         <label><input type="radio" name="card-type" value="mastercard"> Mastercard</label>
         <label><input type="radio" name="card-type" value="visa"> Visa</label>
         <label><input type="radio" name="card-type" value="sas"> SAS Card</label>
+        </div>
 
-        <div class="card-info">
-            <label for="card-number">Card number
-                <input type="text" id="card-number" name="card-number" required placeholder="Card number" pattern="\d{13,19}">
-            </label>
+        <!-- Card number -->
+        <label for="card-number">Card number</label>
+        <input type="text" id="card-number" name="card-number" required placeholder="Card number" pattern="\d{13,19}">
+        <br><br>
 
-            <label for="expiry">Expiry date
-                <input type="month" id="expiry" name="expiry" required>
-            </label>
+        <!-- Expiry date -->
+        <label for="expiry-month">Expiry date</label>
+        <select id="expiry-month" name="expiry-month" required>
+          <option value="">Month</option>
+          <option value="01">01</option>
+          <option value="02">02</option>
+          <option value="03">03</option>
+          <option value="04">04</option>
+          <option value="05">05</option>
+          <option value="06">06</option>
+          <option value="07">07</option>
+          <option value="08">08</option>
+          <option value="09">09</option>
+          <option value="10">10</option>
+          <option value="11">11</option>
+          <option value="12">12</option>
+        </select>
+        <label for="expiry-year" class="visually-hidden">Expiry year</label>
+        <select id="expiry-year" name="expiry-year" required>
+          <option value="">Year</option>
+          <option value="2024">2024</option>
+          <option value="2025">2025</option>
+          <option value="2026">2026</option>
+          <option value="2027">2027</option>
+          <option value="2028">2028</option>
+          <option value="2029">2029</option>
+          <option value="2030">2030</option>
+        </select>
+        <br><br>
+
+        <!-- CVV -->
+        <label for="cvv">CVV</label>
+        <input type="text" id="cvv" name="cvv" required placeholder="XXX" pattern="\d{3,4}">
+
+        </fieldset>
+
+    <!-- Terms and Conditions -->
+    <fieldset>
+      <legend>Terms and Conditions</legend>
+        <input type="checkbox" id="terms" name="terms" required>
+        <label for="terms">I agree to the terms and conditions</label>
+
+        </fieldset>
+
+    <!-- Botão de submit -->
+    <button type="submit">Submit my details</button>
+  </form>
+  
+  <script src="validation.js" defer></script>
+  <script src="loadloc.js"></script>
+
+
+
+</body>
+
+</body>
+</html>
