--- a/index.html
+++ b/index.html
@@ -3,24 +3,125 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Form</title>
-    <script type="text/javascript" src="loadloc.js" defer></script>
+    <title>Activity #3: Forms</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>Using CSS to style an HTML Form</header>
-<article>
-<div>
-  <form id="myform" action="">
-    <!-- TODO TODO TODO -->
+<form>
+    <!-- Personal Information -->
+    <fieldset>
+        <legend>Personal Information</legend>
 
-    <!-- List of Countries -->
-    <select id="loc" name="country1">
-    </select>
+        <label for="title">Title</label>
+        <select id="title" name="title">
+            <option value="mr">Mr.</option>
+            <option value="mrs">Mrs.</option>
+            <option value="ms">Ms.</option>
+            <option value="dr">Dr.</option>
+        </select>
 
-  </form>
-</div>
-</article>
-<footer>pedromoreira 2024</footer>
+        <label for="first-name">First name</label>
+        <input type="text" id="first-name" name="first-name" required placeholder="Your first name here">
+
+        <label for="last-name">Last name</label>
+        <input type="text" id="last-name" name="last-name" required placeholder="Your last name here">
+
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required placeholder="youremail@server.com">
+    </fieldset>
+
+    <!-- Address -->
+    <fieldset>
+        <legend>Address</legend>
+
+        <label for="street">Street</label>
+        <input type="text" id="street" name="street" required placeholder="Street, number, apartment">
+
+        <label for="city">City</label>
+        <input type="text" id="city" name="city" required placeholder="City">
+
+        <label for="state">State/Region</label>
+        <input type="text" id="state" name="state" placeholder="State">
+
+        <label for="postal-code">Postal code</label>
+        <input type="text" id="postal-code" name="postal-code" required placeholder="Postcode" pattern="\d{4}-\d{3}">
+
+        <label for="country">Country</label>
+        <select id="country" name="country" required>
+            <option value="">Select country</option>
+            <!-- Load dynamically with loadloc.js -->
+        </select>
+    </fieldset>
+
+    <!-- Payment details -->
+    <fieldset>
+        <legend>Payment details</legend>
+
+        <div class="payment-group">
+            <span>Credit Card</span>
+            <label><input type="radio" name="card-type" value="amex" required> American Express</label>
+            <label><input type="radio" name="card-type" value="mastercard"> Mastercard</label>
+            <label><input type="radio" name="card-type" value="visa"> Visa</label>
+            <label><input type="radio" name="card-type" value="sas"> SAS Card</label>
+        </div>
+
+        <label for="card-number">Card number</label>
+        <input type="text" id="card-number" name="card-number" required placeholder="Card number" pattern="\d{13,19}">
+
+        <div class="expiry-cvv">
+            <label for="expiry-month">Expiry date
+                <select id="expiry-month" name="expiry-month" required>
+                    <option value="">Month</option>
+                    <option value="01">01</option>
+                    <option value="02">02</option>
+                    <option value="03">03</option>
+                    <option value="04">04</option>
+                    <option value="05">05</option>
+                    <option value="06">06</option>
+                    <option value="07">07</option>
+                    <option value="08">08</option>
+                    <option value="09">09</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                </select>
+            </label>
+
+            <label for="expiry-year">Expiry year
+                <select id="expiry-year" name="expiry-year" required>
+                    <option value="">Year</option>
+                    <option value="2024">2024</option>
+                    <option value="2025">2025</option>
+                    <option value="2026">2026</option>
+                    <option value="2027">2027</option>
+                    <option value="2028">2028</option>
+                    <option value="2029">2029</option>
+                    <option value="2030">2030</option>
+                </select>
+            </label>
+
+            <label for="cvv">CVV
+                <input type="text" id="cvv" name="cvv" required placeholder="XXX" pattern="\d{3,4}">
+            </label>
+        </div>
+    </fieldset>
+
+    <!-- Terms -->
+    <fieldset>
+        <legend>Terms and Conditions</legend>
+        <label>
+            <input type="checkbox" id="terms" name="terms" required>
+            I agree to the terms and conditions
+        </label>
+    </fieldset>
+
+    <!-- Submit -->
+    <button type="submit">Submit my details</button>
+</form>
+
+<script src="validation.js" defer></script>
+<script src="loadloc.js"></script>
+
 </body>
 </html>
